<resources>
    <string name="app_name">Covid19 Brasil</string>
    <string name="country_label">País</string>
    <string name="cases_label">Casos</string>
    <string name="confirmed_label">Confirmados</string>
    <string name="deaths_label">Mortes</string>
    <string name="recovered_label">Recuperados</string>
    <string name="state_label">Estado</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="activity_title_country">Dados do Brasil</string>
    <string name="activity_title_states">Dados dos Estados</string>
    <string name="activity_title_about">Sobre a aplicação</string>
</resources>