<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountryActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity"
            android:padding="8dp">

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/country_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/country_label"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/cases_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cases_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/country_label"
                app:layout_constraintTop_toBottomOf="@id/country_label"
                android:textStyle="bold"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/cases_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/cases_label"
                app:layout_constraintTop_toTopOf="@id/cases_label"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/confirmed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/cases_label"
                app:layout_constraintTop_toBottomOf="@id/cases_label"
                android:textStyle="bold"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/confirmed_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/confirmed_label"
                app:layout_constraintTop_toTopOf="@id/confirmed_label"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/deaths_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/confirmed_label"
                app:layout_constraintTop_toBottomOf="@id/confirmed_label"
                android:textStyle="bold"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/deaths_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/deaths_label"
                app:layout_constraintTop_toTopOf="@id/deaths_label"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/recovered_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/deaths_label"
                app:layout_constraintTop_toBottomOf="@id/deaths_label"
                android:textStyle="bold"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/recovered_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@id/recovered_label"
                app:layout_constraintTop_toTopOf="@id/recovered_label"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/card_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>