<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:maxHeight="250dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:padding="8dp">

        <TextView
            android:id="@+id/state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/card_text" />

        <TextView
            android:id="@+id/state_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/state_label"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/card_text" />

        <TextView
            android:id="@+id/cases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cases_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@id/state_label"
            app:layout_constraintTop_toBottomOf="@id/state_label"
            android:textStyle="bold"
            android:textSize="@dimen/card_text" />

        <TextView
            android:id="@+id/cases_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/cases_label"
            app:layout_constraintTop_toTopOf="@id/cases_label"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/card_text" />

        <TextView
            android:id="@+id/deaths_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@id/cases_label"
            app:layout_constraintTop_toBottomOf="@id/cases_label"
            android:textStyle="bold"
            android:textSize="@dimen/card_text" />

        <TextView
            android:id="@+id/deaths_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/deaths_label"
            app:layout_constraintTop_toTopOf="@id/deaths_label"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/card_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>